<resources>
        <!-- This resource is true if running under at least Honeycomb's
         API level.  The default value is false; an alternative value
         for Honeycomb is true. -->
    <bool name="atLeastHoneycomb">false</bool>
    <string name="app_name">Color Burst</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Color Burst</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="pref_rate_summ">cell alpha animation period </string>
    <string name="pref_rate_title">Alpha Rate</string>
    <string name="pref_block_size_summ">sets grid resolution</string>
    <string name="pref_block_size_title">Grid Resolution</string>
    <string name="color_preference">Cell Colors</string>
    <string name="border_color_preference">Cell Border Colors</string>
    <string name="summary_color_preference">select awesome color range</string>
    <string name="title_border_color_preference">Border Color Range</string>
    <string name="title_color_preference">Cell Color Range</string>
    <string-array name="entries_color_preference">
        <item >All Colors</item>
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
        <item >Blue-Green</item>
        <item >Red-Green</item>
        <item >Red-Blue</item>
        <item >Black-White</item>
    </string-array>
    <string-array name="entryvalues_color_preference">
        <item >All </item>
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
        <item >Cyan</item>
        <item >Yellow</item>
        <item >Magenta</item>
        <item >Gray</item>
    </string-array>    <string-array name="entries_color_preference">
        <item >All Colors</item>
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
        <item >Blue-Green</item>
        <item >Red-Green</item>
        <item >Red-Blue</item>
        <item >Black-White</item>
    </string-array>
    <string-array name="entryvalues_color_preference">
        <item >All </item>
        <item >Red</item>
        <item >Green</item>
        <item >Blue</item>
        <item >Cyan</item>
        <item >Yellow</item>
        <item >Magenta</item>
        <item >Gray</item>
    </string-array>
    <string name="pref_min_alpha_summ">Sets minimum transparency</string>
    <string name="pref_min_alpha_title">Minimum Opacity</string>
    <string name="pref_fill_alpha_summ">Sets cell maximum transparency</string>
    <string name="pref_fill_alpha_title">Cell Maximum Opacity</string>
    <string name="pref_stroke_alpha_summ">sets maximum cell border transparency</string>
    <string name="pref_stroke_alpha_title">Border Maximum Opacity</string>
    <string name="pref_decay_summ">sets alpha animation max step</string>
    <string name="pref_decay_title">Alpha Animation Step Size</string>
    <string name="pref_threshold_summ">set minimum brightness level</string>
    <string name="pref_threshold_title">Minimum  Brightness</string>
    <string name="pref_padding_summ">set distance between cells</string>
    <string name="pref_padding_title">Cell Separation</string>
    <string name="pref_shape">Cell Shape</string>
    <string name="summary_shape_preference">set shape of cells</string>
    <string name="title_shape_preference">Cell Shape</string>
    <string-array name="entries_shape_preference">
        <item >Random</item>
        <item >Rectangle</item>
        <item >Rounded Rectangle</item>
        <item >Circle</item>
        <item >Honeycomb</item>
        <item >Star</item>
        <item >Heart</item>
        </string-array>
    <string-array name="entryvalues_shape_preference">
        <item >random</item>
        <item >rect</item>
        <item >round_rect</item>
        <item >circle</item>
        <item >hexagon</item>
        <item >star</item>
        <item >heart</item>
        </string-array>
    <string name="pref_stroke_width_title">Border Width</string>
    <string name="pref_stroke_width_summ">sets width of cell border</string>
    <string name="fragment_preferences">Fragment Preferences</string>
    <string name="pref_grid_percent_summ">Percent of grid alive</string>
    <string name="pref_grid_percent_title">Grid Alive Percent</string>
    <string name="pref_reincarnate_rate_summ">grid birth rate</string>
    <string name="pref_reincarnate_rate_title">Grid Birth Rate</string>
    
    
</resources>